grammar.txt
<program>    ::= <stmts>
<stmts>      ::= <stmt> <stmts> | ε
<block>      ::= "{" <stmts> "}"
<stmt>       ::= <func_decl>
               | <if_stmt>
               | <while_stmt>
               | <for_stmt>
               | "break"
               | "continue"
               | "return" [ <expr> ]
               | "print"  <expr>
               | "show"
               | IDENT <assign_op> <expr>
               | <expr>
<func_decl>  ::= "func" IDENT "(" <param_list> ")" <block>
<param_list> ::= ε
               | IDENT { "," IDENT }
<arg_list>   ::= ε
               | <expr> { "," <expr> }
<if_stmt>    ::= "if"   "(" <expr> ")" <block>
                 { "elif" "(" <expr> ")" <block> }
                 [ "else" <block> ]
<while_stmt> ::= "while" "(" <expr> ")" <block>
<for_stmt>   ::= "for" "(" <for_clause> ";" <expr> ";" <for_clause> ")" <block>
<for_clause> ::= ε
               | IDENT <assign_op> <expr>
               | <expr>
<assign_op>  ::= "="  | "+=" | "-=" | "*=" | "/=" | "%="
               | "<<=" | ">>="
<expr>       ::= <logic_or>
<logic_or>   ::= <logic_and>
               | <logic_and> "||" <logic_or>
<logic_and>  ::= <bit_or>
               | <bit_or> "&&" <logic_and>
<bit_or>     ::= <bit_xor>
               | <bit_xor> "|" <bit_or>
<bit_xor>    ::= <bit_and>
               | <bit_and> "^" <bit_xor>
<bit_and>    ::= <equality>
               | <equality> "&" <bit_and>
<equality>   ::= <relational>
               | <equality> "==" <relational>
               | <equality> "!=" <relational>
<relational> ::= <shift>
               | <relational> "<"  <shift>
               | <relational> "<=" <shift>
               | <relational> ">"  <shift>
               | <relational> ">=" <shift>
<shift>      ::= <additive>
               | <shift> "<<" <additive>
               | <shift> ">>" <additive>
<additive>   ::= <term>
               | <additive> "+" <term>
               | <additive> "-" <term>
<term>       ::= <unary>
               | <term> "*" <unary>
               | <term> "/" <unary>
               | <term> "%" <unary>
<unary>      ::= <postfix>
               | "-"  <unary>
               | "!"  <unary>
               | "~"  <unary>
               | "++" <unary>
               | "--" <unary>
<postfix>    ::= <primary>
               | <primary> "++"
               | <primary> "--"
<primary>    ::= NUMBER
               | IDENT
               | IDENT "(" <arg_list> ")"
               | "(" <expr> ")"
NUMBER       ::= DIGIT { DIGIT }
IDENT        ::= IDENT_START { IDENT_CHAR }
IDENT_START  ::= [a-zA-Z_]
IDENT_CHAR   ::= [a-zA-Z0-9_]
DIGIT        ::= [0-9]
COMMENT      ::= ";" { any char except newline }
